--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <nav class="navbar navbar-expand-md navbar-dark bg-primary">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#">
-                        <img src="/img/logo.png" alt="logo-share" height="30" />
+                        <img src="/img/white-logo.png" alt="logo-share" height="30" />
                     </a>
                     <button
                         class="navbar-toggler"
@@ -130,12 +130,12 @@
             </section>
         </main>
         <main class="p-4 main-white">
-            <section>
+            <section class="mt-4 mb-4">
                 <h2 class="secondary-title text-primary text-center pb-4">¿Cómo funciona?</h2>
                 <div class="container">
                     <div class="row">
                         <div class="col">
-                            <div class="d-flex flex-column justify-content-center ">
+                            <div class="d-flex flex-column justify-content-center">
                                 <div>
                                     <div class="app-example-app-right">
                                         <img src="./img/example-app-main.png" alt="" class="example-app img-fluid" />
@@ -144,13 +144,14 @@
                             </div>
                         </div>
                         <div class="col d-flex align-items-center">
-                            <div class="d-flex flex-column justify-content-center ">
-                                <div>
+                            <div class="d-flex flex-column justify-content-center">
+                                <div class="col d-flex flex-column align-items-start">
                                     <div class="text-left fw-bold h5">Descarga la aplicación</div>
                                     <div class="p-1 text-left legend">
-                                        Oriéntate con nosotros en cualquier lugar. Disponible en dispositivos con iOS y Android.
+                                        Oriéntate con nosotros en cualquier lugar. Disponible en dispositivos con iOS y
+                                        Android.
                                     </div>
-                                    <div class='pt-2'>
+                                    <div class="pt-2">
                                         <img src="./img/AppstoreGoogle.png" alt="" class="feature-img" />
                                     </div>
                                 </div>
@@ -159,28 +160,28 @@
                     </div>
                     <div class="row">
                         <div class="col d-flex align-items-center">
-                            <div class="d-flex flex-column justify-content-center ">
-                                <div>
-                                    <div class="text-center fw-bold h5">Create una cuenta</div>
-                                    <div class="p-1 text-left legend">
+                            <div class="d-flex flex-column justify-content-center">
+                                <div class="col d-flex flex-column align-items-end">
+                                    <div class="text-center fw-bold h5">Créate una cuenta</div>
+                                    <div class="p-1 text-right legend">
                                         Regístrate gratis ingresando tus datos y accede a nuestro contenido.
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="d-flex flex-column justify-content-center ">
+                            <div class="d-flex flex-column justify-content-center">
                                 <div>
                                     <div class="app-example-app-right">
                                         <img src="./img/example-app-login.png" alt="" class="example-app img-fluid" />
                                     </div>
                                 </div>
                             </div>
-                        </div>      
+                        </div>
                     </div>
                     <div class="row">
                         <div class="col">
-                            <div class="d-flex flex-column justify-content-center ">
+                            <div class="d-flex flex-column justify-content-center">
                                 <div>
                                     <div class="app-example-app-right">
                                         <img src="./img/example-app-list.png" alt="" class="example-app img-fluid" />
@@ -189,11 +190,12 @@
                             </div>
                         </div>
                         <div class="col d-flex align-items-center">
-                            <div class="d-flex flex-column justify-content-center ">
-                                <div>
+                            <div class="d-flex flex-column justify-content-center">
+                                <div class="col d-flex flex-column align-items-start">
                                     <div class="text-left fw-bold h5">Explora las opciones disponibles</div>
                                     <div class="p-1 text-left legend">
-                                        Dentro de nuestra aplicación podrás conocer la información de los asesores, elegir y reservar una clase con ellos.
+                                        Dentro de nuestra aplicación podrás conocer la información de los asesores,
+                                        elegir y reservar una clase con ellos.
                                     </div>
                                 </div>
                             </div>
@@ -204,62 +206,53 @@
         </main>
         <main class="p-4 second-section">
             <section>
-                <h2 class="principal-title text-center text-white">Confía en nuestra experiencia</h2>
+                <h2 class="secondary-title text-center text-white">Confía en nuestra experiencia</h2>
                 <div class="p-2 text-white text-center">
                     Podrás encontrar una lista de asesores disponibles en un solo lugar
                 </div>
                 <div class="container">
                     <div class="row">
-                            <div class="col-6 col-sm-6 col-lg-3 ">
-                                <div class="d-flex flex-column  justify-content-center p-xs-3 p-xl-5">
-                                    <div class="description d-flex flex-column  justify-content-center align-items-center">
-                                        <div>
+                        <div class="col-6 col-sm-6 col-lg-3">
+                            <div class="d-flex flex-column justify-content-center p-xs-3 p-xl-5">
+                                <div class="description d-flex flex-column justify-content-center align-items-center">
+                                    <div>
                                         <div class="p-2 text-center h3 fw-bold text-white">S/. 35</div>
-                                        <div class="p-2 text-center text-white">
-                                            Tarifa por hora
-                                        </div>
-                                        </div>
+                                        <div class="p-2 text-center text-white">Tarifa por hora</div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-6 col-sm-6 col-lg-3 ">
-                                <div class="d-flex flex-column  justify-content-center p-xs-3 p-xl-5">
-                                    <div class="description d-flex flex-column  justify-content-center align-items-center">
-                                        <div>
+                        </div>
+                        <div class="col-6 col-sm-6 col-lg-3">
+                            <div class="d-flex flex-column justify-content-center p-xs-3 p-xl-5">
+                                <div class="description d-flex flex-column justify-content-center align-items-center">
+                                    <div>
                                         <div class="p-2 text-center h3 fw-bold text-white">500+</div>
-                                        <div class="p-2 text-center text-white">
-                                            Asesores
-                                        </div>
-                                        </div>
+                                        <div class="p-2 text-center text-white">Asesores</div>
                                     </div>
                                 </div>
                             </div>
+                        </div>
 
-                            <div class="col-6 col-sm-6 col-lg-3 ">
-                                <div class="d-flex flex-column  justify-content-center p-xs-3 p-xl-5">
-                                    <div class="description d-flex flex-column  justify-content-center align-items-center">
-                                        <div>
+                        <div class="col-6 col-sm-6 col-lg-3">
+                            <div class="d-flex flex-column justify-content-center p-xs-3 p-xl-5">
+                                <div class="description d-flex flex-column justify-content-center align-items-center">
+                                    <div>
                                         <div class="p-2 text-center h3 fw-bold text-white">10000+</div>
-                                        <div class="p-2 text-center text-white">
-                                            Estudiantes
-                                        </div>
-                                        </div>
+                                        <div class="p-2 text-center text-white">Estudiantes</div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-6 col-sm-6 col-lg-3 ">
-                                <div class="d-flex flex-column  justify-content-center p-xs-3 p-xl-5">
-                                    <div class="description d-flex flex-column  justify-content-center align-items-center">
-                                        <div>
+                        </div>
+                        <div class="col-6 col-sm-6 col-lg-3">
+                            <div class="d-flex flex-column justify-content-center p-xs-3 p-xl-5">
+                                <div class="description d-flex flex-column justify-content-center align-items-center">
+                                    <div>
                                         <div class="p-2 text-center h3 fw-bold text-white">15</div>
-                                        <div class="p-2 text-center text-white">
-                                            Departamentos
-                                        </div>
-                                        </div>
+                                        <div class="p-2 text-center text-white">Departamentos</div>
                                     </div>
                                 </div>
                             </div>
-                        
+                        </div>
                     </div>
                 </div>
             </section>
@@ -270,48 +263,40 @@
                 <div>
                     <div class="container mt-2 p-4">
                         <div class="row">
-                            <div class="col-lg-6  mt-5">
-                                <img src="./img/CirculoVineta.png" class="rounded float-start" alt="">
+                            <div class="col-lg-6 mt-5">
+                                <img src="./img/CirculoVineta.png" class="rounded float-start" alt="" />
                                 <div class="ml-sm-5 text-xxl-start">
-                                    <p class="fw-bold h5"> Incrementa tus asesorías</p>
+                                    <p class="fw-bold h5">Incrementa tus asesorías</p>
                                 </div>
                                 <p>
-                                    Enseña y ayuda a más estudiantes a mejorar su rendimiento
-                                    académico y logren sus objetivos.
+                                    Enseña y ayuda a más estudiantes a mejorar su rendimiento académico y logren sus
+                                    objetivos.
                                 </p>
                                 <div class="mt-5"></div>
-                                <img src="./img/CirculoVineta.png" class="rounded float-start" alt="...">
+                                <img src="./img/CirculoVineta.png" class="rounded float-start" alt="..." />
                                 <p class="fw-bold h5">Gana dinero</p>
-                                <p>
-                                    Comparte tus conocimientos y genera ganancias por cada
-                                    asesoría que brindas.
-                                </p>
+                                <p>Comparte tus conocimientos y genera ganancias por cada asesoría que brindas.</p>
                                 <div class="mt-5"></div>
-                                <img src="./img/CirculoVineta.png" class="rounded float-start" alt="...">
+                                <img src="./img/CirculoVineta.png" class="rounded float-start" alt="..." />
                                 <p class="fw-bold h5">Tu información disponible</p>
                                 <p>
-                                    Presenta tu información educativa y laboral para que los
-                                    estudiantes conozcan más sobre ti.
+                                    Presenta tu información educativa y laboral para que los estudiantes conozcan más
+                                    sobre ti.
                                 </p>
                                 <div class="mt-5"></div>
-                                <img src="./img/CirculoVineta.png" class="rounded float-start" alt="...">
+                                <img src="./img/CirculoVineta.png" class="rounded float-start" alt="..." />
                                 <p class="fw-bold h5">Gestiona tu tiempo</p>
                                 <p>
-                                    Acomoda tus horarios disponibles como quieras, nuestras políticas promueven la flexibilidad de nuestros asesores.
+                                    Acomoda tus horarios disponibles como quieras, nuestras políticas promueven la
+                                    flexibilidad de nuestros asesores.
                                 </p>
                                 <div class="mt-lg-5"></div>
                                 <div class="mb-4 text-lg-center">
-
                                     <img src="./img/Google_Play.png" alt="" class="img-fluid principal-img mr-4" />
                                     <img src="./img/App_Store.png" alt="" class="img-fluid principal-img" />
                                 </div>
                             </div>
-
-                            <div class="col-lg-1 col-md-12">
-                            </div>
-
                             <div class="col-lg-5 col-md-12 text-right">
-
                                 <img src="./img/PersonaShare.png" alt="" class="img-fluid big-principal-img ms-2" />
                             </div>
                         </div>
@@ -327,21 +312,21 @@
                     <!-- Grid row -->
                     <div class="row mt-3">
                         <!-- Grid column -->
-                        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4 ">
+                        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
                             <!-- Content -->
                             <h6 class="text-uppercase fw-bold mb-4">
-                                <i class="fas fa-gem me-3"></i><img src="/img/logo.png" alt="logo-share" height="30" />
+                                <i class="fas fa-gem me-3"></i
+                                ><img src="/img/white-logo.png" alt="logo-share" height="30" />
                             </h6>
                             <p class="text-left description">
-                                Share es una plataforma online de enseñanza para estudiantes dedicados a las carreras de tecnología e información.
+                                Share es una plataforma online de enseñanza para estudiantes dedicados a las carreras de
+                                tecnología e información.
                             </p>
                         </div>
 
-                        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto ">
+                        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto">
                             <!-- Links -->
-                            <h6 class="text-left fw-bold mb-4">
-                                Menú
-                            </h6>
+                            <h6 class="text-left fw-bold mb-4">Menú</h6>
                             <p>
                                 <a href="#!" class="text-reset">Características</a>
                             </p>
@@ -359,18 +344,16 @@
                         <!-- Grid column -->
                         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                             <!-- Links -->
-                            <h6 class="fw-bold mb-4">
-                                Contacto
-                            </h6>
-                             <p>
-                                 <i class="bi bi-envelope me-3"></i>
-                                 contacto@share.com.pe</p>
+                            <h6 class="fw-bold mb-4">Contacto</h6>
+                            <p>
+                                <i class="bi bi-envelope me-3"></i>
+                                contacto@share.com.pe
+                            </p>
                             <p>
                                 <i class="fas fa-envelope me-3"></i>
                                 +51 922556565
                             </p>
                             <p><i class="fas fa-phone me-3"></i> 772 Av. Grau - La Molina</p>
-
                         </div>
                         <!-- Grid column -->
                     </div>
@@ -380,7 +363,7 @@
             <!-- Section: Links  -->
 
             <!-- Copyright -->
-            <div class="text-left p-3" style="background-color: #414141;">
+            <div class="text-left p-3" style="background-color: #414141">
                 © 2021 Share. Todos los derechos reservados
             </div>
             <!-- Copyright -->
