commit Anthony Rojas1

--- a/index.html
+++ b/index.html
@@ -257,6 +257,204 @@
                 </div>
             </section>
         </main>
+
+        </main>
+        <main class="p-5 main">
+            <section>
+                <h2 class="secondary-title text-primary text-center">Testimonios</h2>
+                <p class="text-dark text-center">
+                    Mira lo que nuestros clientes hablan de nosotros
+                </p>
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+
+                        <div class="carousel-item active">
+                            <div class="container">
+
+                                <div class="row">
+                                    <div class="col-lg-4 col-md-124">
+                                        <div class="d-flex flex-column justify-content-center p-xs-3 p-xl-5">
+                                            <div class="feature-item">
+                                                <div class="p-2 text-center fw-bold">Rápido y eficiente</div>
+                                                <div class="p-2 text-center">
+                                                    Pude realizar una reserva en poco tiempo y sin complicaciones.
+                                                </div>
+                                            </div>
+                                            <div class="p-2 text-center">
+                                                <img src="./img/Perfil1.png" alt="" class="img-fluid feature-img" />
+                                            </div>
+                                            <div class="p-2 text-center fw-bold">Jane Cooper</div>
+                                            <div class="p-2 text-center">
+                                                CEO at ABC Corporation
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-lg-4 col-md-124">
+                                        <div class="d-flex flex-column justify-content-center p-xs-3 p-xl-5">
+                                            <div class="feature-item">
+                                                <div class="p-2 text-center fw-bold">Mejor servicio</div>
+                                                <div class="p-2 text-center">
+                                                    Cumplió mis expectativas, la mejor plataforma de asesorías virtual.
+                                                </div>
+                                            </div>
+                                            <div class="p-2 text-center">
+                                                <img src="./img/Perfil1.png" alt="" class="img-fluid feature-img" />
+                                            </div>
+                                            <div class="p-2 text-center fw-bold">Jane Cooper</div>
+                                            <div class="p-2 text-center">
+                                                CEO at ABC Corporation
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-4 col-md-124">
+                                        <div class="d-flex flex-column justify-content-center p-xs-3 p-xl-5">
+                                            <div class="feature-item">
+                                                <div class="p-2 text-center fw-bold">Buenos docentes</div>
+                                                <div class="p-2 text-center">
+                                                    Gran variedad de asesores que me ayudaron bastante en mi rendimiento académico
+                                                </div>
+                                            </div>
+                                            <div class="p-2 text-center">
+                                                <img src="./img/Perfil1.png" alt="" class="img-fluid feature-img" />
+                                            </div>
+                                            <div class="p-2 text-center fw-bold">Jane Cooper</div>
+                                            <div class="p-2 text-center">
+                                                CEO at ABC Corporation
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                        </div>
+                        <div class="carousel-item">
+
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-lg-4 col-md-124">
+                                        <div class="d-flex flex-column justify-content-center p-xs-3 p-xl-5">
+                                            <div class="feature-item">
+                                                <div class="p-2 text-center fw-bold">Precio cómodo</div>
+                                                <div class="p-2 text-center">
+                                                    El pago por el servicio es acorde a lo que busco.
+                                                </div>
+                                            </div>
+                                            <div class="p-2 text-center">
+                                                <img src="./img/Perfil1.png" alt="" class="img-fluid feature-img" />
+                                            </div>
+                                            <div class="p-2 text-center fw-bold">Jane Cooper</div>
+                                            <div class="p-2 text-center">
+                                                CEO at ABC Corporation
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-4 col-md-124">
+                                        <div class="d-flex flex-column justify-content-center p-xs-3 p-xl-5">
+                                            <div class="feature-item">
+                                                <div class="p-2 text-center fw-bold">Ayuda a organizar mis asesorías</div>
+                                                <div class="p-2 text-center">
+                                                    Pude organizar mejor mis asesorías para no confundir mis horarios.
+                                                </div>
+                                            </div>
+                                            <div class="p-2 text-center">
+                                                <img src="./img/Perfil1.png" alt="" class="img-fluid feature-img" />
+                                            </div>
+                                            <div class="p-2 text-center fw-bold">Jane Cooper</div>
+                                            <div class="p-2 text-center">
+                                                CEO at ABC Corporation
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-4 col-md-124">
+                                        <div class="d-flex flex-column justify-content-center p-xs-3 p-xl-5">
+                                            <div class="feature-item">
+                                                <div class="p-2 text-center fw-bold">Buenos docentes</div>
+                                                <div class="p-2 text-center">
+                                                    Gran variedad de asesores que me ayudaron bastante en mi rendimiento académico
+                                                </div>
+                                            </div>
+                                            <div class="p-2 text-center">
+                                                <img src="./img/Perfil1.png" alt="" class="img-fluid feature-img" />
+                                            </div>
+                                            <div class="p-2 text-center fw-bold">Jane Cooper</div>
+                                            <div class="p-2 text-center">
+                                                CEO at ABC Corporation
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-lg-4 col-md-124">
+                                        <div class="d-flex flex-column justify-content-center p-xs-3 p-xl-5">
+                                            <div class="feature-item">
+                                                <div class="p-2 text-center fw-bold">Rápido y eficiente</div>
+                                                <div class="p-2 text-center">
+                                                    Pude realizar una reserva en poco tiempo y sin complicaciones.
+                                                </div>
+                                            </div>
+                                            <div class="p-2 text-center">
+                                                <img src="./img/Perfil1.png" alt="" class="img-fluid feature-img" />
+                                            </div>
+                                            <div class="p-2 text-center fw-bold">Jane Cooper</div>
+                                            <div class="p-2 text-center">
+                                                CEO at ABC Corporation
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-4 col-md-124">
+                                        <div class="d-flex flex-column justify-content-center p-xs-3 p-xl-5">
+                                            <div class="feature-item">
+                                                <div class="p-2 text-center fw-bold">Mejor servicio</div>
+                                                <div class="p-2 text-center">
+                                                    Cumplió mis expectativas, la mejor plataforma de asesorías virtual.
+                                                </div>
+                                            </div>
+                                            <div class="p-2 text-center">
+                                                <img src="./img/Perfil1.png" alt="" class="img-fluid feature-img" />
+                                            </div>
+                                            <div class="p-2 text-center fw-bold">Jane Cooper</div>
+                                            <div class="p-2 text-center">
+                                                CEO at ABC Corporation
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-4 col-md-124">
+                                        <div class="d-flex flex-column justify-content-center p-xs-3 p-xl-5">
+                                            <div class="feature-item">
+                                                <div class="p-2 text-center fw-bold">Buenos docentes</div>
+                                                <div class="p-2 text-center">
+                                                    Gran variedad de asesores que me ayudaron bastante en mi rendimiento académico
+                                                </div>
+                                            </div>
+                                            <div class="p-2 text-center">
+                                                <img src="./img/Perfil1.png" alt="" class="img-fluid feature-img" />
+                                            </div>
+                                            <div class="p-2 text-center fw-bold">Jane Cooper</div>
+                                            <div class="p-2 text-center">
+                                                CEO at ABC Corporation
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </section>
+        </main>
+
         <main class="pt-4 pl-4 pr-4 pb-0 main-white">
             <section>
                 <h2 class="secondary-title text-primary text-center">¿Quieres ser un asesor de Share?</h2>
